serviceA/gw.yml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: my-service-gw
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
